# pico-examples

./: CMakeLists.txt  README.md
AMR_touch_test/: CMakeLists.txt  IDC_IO.h  bit.c  i2c.c  i2c.h  led.c  led.h  main.c  touch.c  touch.h
LAD_test/: CMakeLists.txt  IDC_IO.h  bit.c  bit.h  i2c.c  i2c.h  lcd.c  lcd.h  led.c  led.h  main.c  touch.c  touch.h
MFD_test/: CMakeLists.txt  DUTSerial.cpp  DUTSerial.h  SerialUI.cpp  SerialUI.h  T38BoardIO.h  adv7393.cpp  adv7393.h  data_interface.h  dio.h  i2c.c  i2c.h  idc.h  main.cpp  tone.h
uart/hello_MFD/: CMakeLists.txt
